# fp2025

./: CHANGELOG.md  CList.hs  LICENSE  Macro.hs  Main.hs  Makefile  RList.hs  Tape.hs  Turing.hs  fp2025.cabal  run
Data/: CList.hs  ReachGraph.hs
Data/List/: Compressed.hs
Data/List/Compressed/: Pattern.hs
System/Timeout/: Unsafe.hs
Test/QuickCheck/: Extra.hs
Text/: Pretty.hs
Turing/: Examples.hs  Machine.hs  Scratch.hs  Tape.hs  Types.hs
Turing/Machine/: Macro.hs
