cabal-version:      3.0
name:               fp2025
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ulf Norell
maintainer:         ulf.norell@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

executable fp2025
    main-is:          Turing.hs
    other-modules:    RList
                      Tape
                      Macro
                      Data.CList
    -- other-extensions:
    build-depends:    base,
                      array,
                      containers,
                      pretty,
                      QuickCheck
    hs-source-dirs:   .
    default-language: GHC2021
    ghc-options: -O3
                 -dsuppress-coercions -ddump-simpl -dsuppress-idinfo
                 -dsuppress-type-applications -dsuppress-uniques
                 -dsuppress-module-prefixes -ddump-to-file

    if impl(ghc >= 9.10)
      ghc-options: -Wno-x-partial
    default-extensions:
      LambdaCase
      ViewPatterns
      RecordWildCards
      PatternSynonyms
      DerivingStrategies
      MultiWayIf
